SP2 (API): add get user balances
